# rabbitmq_mcp

./: README.md  pyproject.toml
src/rabbitmq_mcp/: __init__.py  connection.py  server.py
