[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rabbitmq-mcp-altqa"
version = "1.0.0"
description = "MCP server for RabbitMQ with SSL/CA certificate support for ALT QA Tools"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.0.0",
    "pika>=1.3.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]

[project.scripts]
rabbitmq-mcp-altqa = "rabbitmq_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rabbitmq_mcp"]
